--- a/index.html
+++ b/index.html
@@ -71,7 +71,36 @@
         </div>
         <div class="row">
           <div class="span10">
+            <p>
+              Making games is pretty <em>frickin'</em> awesome, but before we can do that, we have to figure out just what exactly games are.
+              Off to the dictionary!
+            </p>
             <h2>Definition</h2>
+            <blockquote>
+              <p><strong>1 a<strong> (1) : activity engaged in for diversion or amusement</p>
+              <small><a href="http://www.merriam-webster.com/dictionary/game">Merriam-Webster Online Dictionary</a></small>
+            </blockquote>
+            <img alt="So is TV a game?" src="TV.png"></img>
+            <em>Hmmm</em>, Tom thinks to himself. <em>So watching TV is a game? I mean, it is a diversion, right?</em>
+            <br/>
+            <p>
+              I think young Sally might have something to say about that!
+            <p>
+
+            <img alt="Playing games is fun!" src="Silly.png"></img>
+            <img alt="Game Types" src="GameTypes.png"></img>
+
+            <p>
+              Sally is absolutely right. Games come in many different forms, but all of them involve interaction, in the form of <em>play</em>.
+              Let's look at a clearer definition before we move on:
+            </p>
+            <blockquote>
+              <p><em>Noun:</em>	A form of play or sport, esp. a competitive one played according to rules and decided by skill, strength, or luck.</p>
+              <small><a href="https://www.google.com/search?q=define%3Agame">Google Search: "define: game"</a></small>
+            </blockquote>
+            <p>Now that's something that even Sally can agree with.</p>
+
+            <h2>What Makes Games Good?</h2>
           </div>
         </div>
       </div>
