--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap, from Twitter</title>
+    <title>Computer Game Design</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -41,7 +41,7 @@
     <div class="topbar">
       <div class="topbar-inner">
         <div class="container-fluid">
-          <a class="brand" href="#">Game Design</a>
+          <a class="brand" href="#">Computer Game Design</a>
           <ul class="nav">
             <!--
             <li class="active"><a href="#">Home</a></li>
@@ -99,6 +99,14 @@
               <small><a href="https://www.google.com/search?q=define%3Agame">Google Search: "define: game"</a></small>
             </blockquote>
             <p>Now that's something that even Sally can agree with.</p>
+
+            <h3>What's a Computer Game?<h3>
+
+            <p>
+              When you think of the phrase <em>Computer Game</em>, the first thing that comes to mind is probably a graphically rich PC game like <em>Call of Duty</em>,
+              but you would only be scratching the surface. A computer game is a game played on an electronic device, and it doesn't need to involve a screen at all! 
+              (See, for example <a href="http://en.wikipedia.org/wiki/Audio_game">Wikipedia: Audio Game</a>)
+            </p>
 
             <h2>What Makes Games Good?</h2>
           </div>
